[gd_scene load_steps=28 format=2]

[ext_resource path="res://scripts/Game1.gd" type="Script" id=1]
[ext_resource path="res://fonts/OpenSans-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/ItemList.gd" type="Script" id=3]
[ext_resource path="res://textures/porta_cerrado.png" type="Texture" id=4]
[ext_resource path="res://scenes/LastChoice.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/EndGame.tscn" type="PackedScene" id=6]
[ext_resource path="res://textures/fire_particle.png" type="Texture" id=7]
[ext_resource path="res://scenes/Offer.tscn" type="PackedScene" id=8]
[ext_resource path="res://textures/MUJERVIVOLA.png" type="Texture" id=9]
[ext_resource path="res://textures/DERECHO.png" type="Texture" id=10]
[ext_resource path="res://textures/porta_abierto.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="DynamicFont" id=2]

size = 25
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 100
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Curve2D" id=4]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1444.25, 372.88, 0, 0, 0, 0, 165.724, 372.872 )
}

[sub_resource type="DynamicFont" id=5]

size = 100
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=6]

size = 100
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="StyleBoxFlat" id=8]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="Gradient" id=9]

offsets = PoolRealArray( 0, 0.491124, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.773438, 0, 1, 1, 0.351563, 0, 1 )

[sub_resource type="GradientTexture" id=10]

flags = 4
gradient = SubResource( 9 )
width = 2048

[sub_resource type="Curve" id=11]

min_value = -200.0
max_value = 200.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 200 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]

flags = 4
width = 2048
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]

render_priority = 0
trail_divisor = 2
emission_shape = 2
emission_box_extents = Vector3( 50, 100, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 0.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 500.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
linear_accel_curve = SubResource( 12 )
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
color_ramp = SubResource( 10 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Emission Shape", "Gravity", "Initial Velocity", "Linear Accel", "Spread", "Trail" ]

[sub_resource type="DynamicFont" id=14]

size = 60
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=15]

resource_name = "fadein"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="ParticlesMaterial" id=16]

render_priority = 0
trail_divisor = 2
emission_shape = 2
emission_box_extents = Vector3( 50, 600, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 0.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 500.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
linear_accel_curve = SubResource( 12 )
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
color_ramp = SubResource( 10 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Emission Shape", "Gravity", "Initial Velocity", "Linear Accel", "Spread", "Trail" ]

[sub_resource type="DynamicFont" id=7]

size = 100
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Game1" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="ItemList" type="ItemList" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -236.0
margin_top = 120.0
margin_right = 638.0
margin_bottom = 612.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/bg = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
items = [  ]
select_mode = 0
allow_reselect = false
max_columns = 5
same_column_width = true
icon_mode = 0
icon_scale = 0.2
fixed_icon_size = Vector2( 0, 0 )
script = ExtResource( 3 )
_sections_unfolded = [ "Columns", "Icon", "custom_fonts", "custom_styles" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

editor/display_folded = true
position = Vector2( 1480.6, 272.404 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Index" type="Label" parent="Sprite" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -166.0
margin_top = -190.0
margin_right = 145.0
margin_bottom = 289.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Index"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Atras" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 878.0
margin_top = 21.0
margin_right = 970.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Prefiero otro"
flat = false
align = 1

[node name="Path2D" type="Path2D" parent="." index="3"]

editor/display_folded = true
position = Vector2( 35.0738, -11.6913 )
curve = SubResource( 4 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D" index="0"]

editor/display_folded = true
position = Vector2( 165.724, 372.872 )
offset = 1276.64
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = false
lookahead = 4.0

[node name="LastChance" parent="Path2D/PathFollow2D" index="0" instance=ExtResource( 5 )]

visible = false
position = Vector2( -899.58, -400.898 )
scale = Vector2( 0.5, 0.5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="EndGame" parent="Path2D/PathFollow2D" index="1" instance=ExtResource( 6 )]

visible = false
position = Vector2( -629.425, -333.227 )
z_index = 5
_sections_unfolded = [ "Visibility", "Z Index" ]

[node name="Camera2D" type="Camera2D" parent="Path2D/PathFollow2D" index="2"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin" ]

[node name="ColorRect" type="ColorRect" parent="Path2D/PathFollow2D" index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -626.0
margin_top = 117.0
margin_right = -425.0
margin_bottom = 354.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0.0726318, 0.464844, 1 )

[node name="Sprite" type="Sprite" parent="Path2D/PathFollow2D/ColorRect" index="0"]

editor/display_folded = true
position = Vector2( 96.8552, 165.826 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Index" type="Label" parent="Path2D/PathFollow2D/ColorRect/Sprite" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -167.0
margin_top = -191.0
margin_right = 146.0
margin_bottom = 293.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Index"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Hold" type="Label" parent="Path2D/PathFollow2D/ColorRect/Sprite" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -443.0
margin_top = -432.0
margin_right = -20.0
margin_bottom = -295.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "On hold:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Offer" type="Label" parent="Path2D/PathFollow2D/ColorRect/Sprite" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -250.0
margin_top = -859.0
margin_right = 256.0
margin_bottom = -442.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "Oferta en:
 X"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Tween" type="Tween" parent="." index="4"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Abrir" type="Button" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1343.0
margin_top = 192.0
margin_right = 1620.0
margin_bottom = 373.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "custom_styles" ]

[node name="Fire3" type="Particles2D" parent="." index="6"]

show_behind_parent = true
position = Vector2( 2009.08, 682.224 )
rotation = -1.5708
emitting = true
amount = 500
lifetime = 1.3
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.5
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 13 )
texture = ExtResource( 7 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform", "Visibility" ]

[node name="Fire" type="Particles2D" parent="." index="7"]

show_behind_parent = true
position = Vector2( 959.05, 698.328 )
rotation = -1.5708
emitting = true
amount = 500
lifetime = 1.3
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.5
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 13 )
texture = ExtResource( 7 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform", "Visibility" ]

[node name="Offer" parent="." index="8" instance=ExtResource( 8 )]

position = Vector2( 192.476, 368.369 )

[node name="Label" type="Label" parent="." index="9"]

show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -437.0
margin_top = 7.0
margin_right = 838.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 14 )
custom_colors/font_color_shadow = Color( 0.382813, 0.382813, 0.382813, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/shadow_offset_y = 4
text = "Elige un portafolio para guardar"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="10"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fadein = SubResource( 15 )
blend_times = [  ]

[node name="Vivora" type="Sprite" parent="." index="11"]

show_behind_parent = true
position = Vector2( 1476.45, 210.259 )
scale = Vector2( 0.45, 0.5 )
texture = ExtResource( 9 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Sprite" type="Sprite" parent="Vivora" index="0"]

show_behind_parent = true
position = Vector2( -239.282, 271.381 )
rotation = -4.71239
scale = Vector2( 0.4, -0.4 )
z_index = 1
texture = ExtResource( 10 )
_sections_unfolded = [ "Region", "Transform", "Visibility", "Z Index" ]

[node name="Sprite2" type="Sprite" parent="Vivora" index="1"]

show_behind_parent = true
position = Vector2( 252.71, 274.694 )
rotation = -4.71239
scale = Vector2( 0.4, 0.4 )
z_index = 1
texture = ExtResource( 10 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="Fire2" type="Particles2D" parent="." index="12"]

show_behind_parent = true
position = Vector2( 1482.32, 706.511 )
rotation = -1.5708
emitting = true
amount = 1500
lifetime = 0.5
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.5
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 16 )
texture = ExtResource( 7 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform", "Visibility" ]

[node name="Sprite2" type="Sprite" parent="." index="13"]

editor/display_folded = true
position = Vector2( 1478.39, 267.104 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="Sprite2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -300.0
margin_top = -62.0
margin_right = 305.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )

[node name="Label" type="Label" parent="Sprite2/ColorRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 603.0
margin_bottom = 152.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Cash"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]

[connection signal="pressed" from="Atras" to="." method="_on_Button_pressed"]

[connection signal="chioce" from="Path2D/PathFollow2D/LastChance" to="." method="_on_LastChance_chioce"]

[connection signal="pressed" from="Abrir" to="." method="_on_Abrir_pressed"]

[connection signal="offer_refused" from="Offer" to="." method="_on_Offer_offer_refused"]

[connection signal="offer_taken" from="Offer" to="." method="_on_Offer_offer_taken"]


